--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pinecone-database/pinecone": "^6.1.2",
     "axios": "^1.11.0",
     "jsdom": "^26.1.0",
     "next": "15.4.3",
